Thu Nov 12 15:53:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Exteded perl fuzz checks

Thu Nov 12 08:31:00 UTC 2009  Denis Budko <denis.budko@remedy.nl>

        * docs/run_test.txt
          Added description of TestTarget::HostName() function usage

Thu Nov 12 06:54:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Default_Constants.h:
        * ace/OS_NS_fcntl.h:
        * ace/RW_Process_Mutex.h:
          Moved all constants to Default_Constants.h

Wed Nov 11 14:57:15 UTC 2009  Olli Savia  <ops@iki.fi>

        * tests/run_test.lst:
          Run Network_Adapters_Test and SOCK_Dgram_Bcast_Test on LynxOS.

Wed Nov 11 13:49:11 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/config-freebsd.h:
          Added ACE_HAS_SIGISMEMBER_BUG.

Wed Nov 11 12:07:36 UTC 2009  Olli Savia  <ops@iki.fi>

        * bin/fuzz.pl:
          Added strsignal to functions that is checked
          for the lack of ACE_OS.

Wed Nov 11 11:45:23 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_string.h:
          Doxygen updates.

Wed Nov 11 11:36:26 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_signal.inl:
        * ace/config-lynxos.h:
        * ace/os_include/os_signal.h:
        * configure.ac:
        * m4/config_h.m4:
        * m4/platform.m4:
          Renamed ACE_HAS_LYNXOS_SIGNALS to ACE_HAS_LYNXOS4_SIGNALS.

Wed Nov 11 09:36:32 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Extended Id check to detect Id:

Wed Nov 11 03:07:32 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * include/makeinclude/platform_macosx_snowleopard.GNU:

          Add support for building 32 bits.

Tue Nov 10 21:03:25 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * bin/sets-manager.py:

          bugfix for windows.  note that cleaning up the temp directory doesn't
          work on windows, that will need to be done by hand.
