@@ -190,6 +190,8 @@ protected:
 
 ACE_END_VERSIONED_NAMESPACE_DECL
 
+ACE_STATIC_SVC_DECLARE_EXPORT(ACE, ACE_Logging_Strategy)
+
 ACE_FACTORY_DECLARE (ACE, ACE_Logging_Strategy)
 
 #endif /* ACE_LOGGING_STRATEGY_H */
